[package]
name = "hardpass-vm"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A small, reliable Ubuntu cloud-image VM manager built on QEMU."
readme = "README.md"
repository = "https://github.com/peterdelevoryas/hardpass"
homepage = "https://github.com/peterdelevoryas/hardpass"
documentation = "https://docs.rs/hardpass-vm"
keywords = ["qemu", "vm", "ubuntu", "cloud-init", "cli"]
authors = ["Peter Delevoryas <peter@pjd.dev>"]

[lib]
name = "hardpass"
path = "src/lib.rs"

[[bin]]
name = "hardpass"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
nix = { version = "0.29", features = ["process", "signal", "user", "fs", "mount", "net", "term", "fanotify"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }

fatfs = "0.3.6"
fs2 = "0.4.3"
fscommon = "0.1.1"

[dev-dependencies]
mockito = "1"
tempfile = "3"
